# JP-delivery-marketplace

./: LICENSE  README.md  pyproject.toml
app/: main.py
