[tool.poetry]
name = "jp-delivery-marketplace"
version = "0.1.0"
description = "FastAPI-based application for delivering goods from Japan to Kazakhstan. It includes features like order management, delivery tracking, and payment integration."
authors = ["Nikolaj-dev <nikolaypetrichshev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-json-logger = "^2.0.7"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
redis = "^5.1.1"
pymongo = "^4.10.1"
psycopg2-binary = "^2.9.9"
rabbitmq = "^0.2.0"
celery = "^5.4.0"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

